--- a/秋招经历/面经.md
+++ b/秋招经历/面经.md
@@ -1,12 +1,69 @@
 ##  C++
 
+### C相关问题
 
++  **C程序如何启动和终止的**
+  + 内核调用一个exec函数，调用exec的进程将命令行参数传递给启动例程，然后启动例程调用main函数。
+  + 进程自愿终止的唯一方法是显式或隐式地(通过调用exit)调用\_exit或 \_Exit。进程也可非自愿地由一个信号使其终止。
 
++  **atexit函数**
+  + atexit函数类似于C++类中的析构函数，在main函数结束之后被exit调用，调用顺序与登记顺序相反。同一函数如若登记多次也会被调用多次。
+  + `atexit`的参数是一个函数地址，无需传递参数,也不期望返回值。
 
++  **C程序的存储地址空间布局**
+  + 从低地址往高地址分别为： 正文段—> 初始化数据段—> 未初始化数据段—> 堆——>栈。
+  + 它们的主要作用：
+    + 正文段：这部分是共享的，也是只读的，是CPU执行的机器指令部分。
+    + 初始化数据段：包含程序中需明确地赋初值的变量
+    + 未初始化数据段：也称为bss段( block started by symbol)，在程序执行之前，内核将该段中的数据初始化为0或空指针。
+    + 堆：动态分配存储的区域
+    + 栈：自动变量以及函数调用所需要保存信息的区域
 
++  **什么是共享库，有什么优点**
+  + 库是一种可执行代码的二进制形式，可以被操作系统载入内存执行。共享库可以让它的代码同时为多个进程所用，而代码实例在整个内存空间中仅需一份。
+  + 优点：
+    + 程序调用动态库函数时，用动态链接方法将程序与共享库函数相链接。缩少了可执行文件的大小。
+    + 新版本代替老版本时，无需对使用该库的程序重新连接编译。
++  **讲一下存储空间分配函数——malloc, realloc, calloc各自的用法**
+  + `void *malloc(size_t size);`  分配指定字节数的存储区，初始值不确定
+  + `void *calloc(size_t nobj, size_t size);` 分配指定 数目，长度 的存储空间， 初始化为0
+  + `void *realloc(void *ptr, size_t newsize);` 增加或减少以前分配区的长度，新增区初始值不确定
++   **C++ 中的 string 与 C 中的 `char *` 有什么区别？**
+  + string继承自 basic_string ，是对 `char` 进行了封装，包含 char 数组，容量，长度等属性
+  + string可以动态扩展，每次扩展是原空间的两倍，将原内容拷贝进去。
 
+### C++基本介绍
 
++ 聊一聊C++面向对象的三大特性
 
+  > C++ 的三大特性就是继承，封装和多态。
+
+  + 继承：让某种类型对象获得另一个类型对象的属性和方法。有三种继承方式：
+    + 实现继承：指使用基类的属性和方法而无需额外编码的能力
+    + 接口继承：指仅使用属性和方法的名称、但是子类必须提供实现的能力
+    + 可视继承：(C++里好像不怎么用)
+  + 封装：变量和方法捆绑成类，可以对它们进行信息隐藏，只让可信的对象和类操作。
+  + 多态：同一事物表现出不同事物的能力。实现多态的两种方式：
+    + 覆盖： 是指子类重新定义父类的虚函数的做法。
+    + 重载：是指允许存在多个同名函数，而函数的参数表不同
+
+### 变量与基本类型
+
++  **变量与定义的区别**
+  + 声明仅仅将变量声明的位置与类型提供给编译器，并不分配内存。定义会在定义的地方直接分配存储空间。
+  + 相同变量可在多处声明，但只能一处定义。
++  **什么情况下必须用到初始化成员列表**
+  + 初始化const成员
+  + 初始化reference成员
+  + 调用基类的构造函数，该函数有参数
+  + 调用数据成员对象的构造函数，该函数有参数
++  **常量指针与指针常量的区别**
+  + 常量指针指常量的指针，注重常量，不能修改指定的值 ：`int const *p` 或 `const int *p`
+  + 指针常量指不能修改指针的指向，指针是一个常量： `int *const p` 。
++  **介绍野指针与空悬指针，如何避免？**
+  + 野指针：没有初始化的指针
+  + 空悬指针： 指针最初指向的内存已经被释放了的一种指针。
+  + 解决方法：使用完置空，或者使用智能指针。
 
 ## STL
 
