--- a/秋招经历/面经.md
+++ b/秋招经历/面经.md
@@ -1,4 +1,4 @@
-## 刷题
+## **刷题**
 
 ### 面试问过的
 
@@ -179,15 +179,182 @@
 + 讲讲TCP KeepAlive(保活机制,即心跳包)
 + 为什么喜欢在应用层定义KeepAlive而不用TCP协议栈中自带的？(我回答更灵活,可以自定义配置比如消息类型，时间间隔，接收后的处理)
 
-+  **TCP连接建立过程中要解决哪些问题？**
+---
 
-+  **TCP链接建立过程**
++ **传输层的工作内容是什么？**
+  + 从通信和信息处理的角度看，运输层向上面的应用层提供通信的服务，属于面向通信部分的最高层，也是用户功能部分的最底层。(只有网络边缘部分的主机协议栈才有运输层)
+
+---
+
++  **网络层与传输层的区别？**
+  + 网络层是为主机之间提供逻辑通信
+  + 传输层为应用进程之间提供端到端的逻辑通信
+
+---
+
++  **运输层有什么重要功能？**
+  + 主机中实现多个应用进程分别与另一台主机中的多个应用进程通信，拥有复用与分用的能力
+    + 复用： 发送方不同应用进程都能使用同一个运输层协议传输数据（加上适当的首部）
+    + 分用： 接收方的运输层在剥去报文的首部后，能把数据正确的交付给对应的目的进程
+
+---
+
++  **在运输层中端口有什么作用？**
+  + 从运输层的角度看，通信的对象是进程，而端口就代表了进程。
+    + 端口用一个16位端口号进行标记
+    + 只需有本地意义，只标记了本计算机应用层的各个进程
+
+---
+
++  **用户数据报协议UDP(User Datagram Protocol) 有什么特点？**
+
+  1. 面向报文的，对应用层交付的报文，不合并也不拆分，加上首部之后直接发送
+
+     > + 报文太长，交给IP层之后，IP层可能会分片，降低IP层效率
+     > + 报文太短，交给IP层之后，显得IP数据报首部相对长度太长，也降低IP层效率
+
+  2. 无连接的：发送消息之前不需要建立连接，减少了开销与发送数据之前的延迟
+  3. 尽最大努力交付：不保证可靠交付，因此主机之间不需要维持复杂的连接状态表
+  4. 没有拥塞控制：因此网络拥塞时不会使源主机的发送速率降低，符合多媒体通信要求
+  5. 支持一对一，一对多，多对一，多对多的交互通信
+  6. 首部开销小，只有8字节，比TCP的20字节小
+
+---
+
++  **介绍一下UDP的首部格式**
+  + UDP有两个字段：  首部字段 和 数据字段。首部字段有8个字节，由4个字段组成，每个字段占两个字节：
+    + 源端口： 源端口号。需要给对方回信时使用，不用时赋予0
+    + 目的端口： 目的端口号。 在终点交付报文时必须使用
+    + 长度：UDP数据报的长度，最小值为8
+    + 检验和：检验UDP 数据报在传输过程中是否出错，出错则丢弃
+
+---
+
++  **为什么需要TCP协议？**
+  + IP层是不可靠，不保证网络包的按需交付与数据完整性。
+  + 如果需要保证传输过程可靠，则需要上层的TCP协议来负责，TCP能保证接收端收到的网络包是按序，无损坏的
+
+---
+
++  **介绍一下 传输控制协议TCP(Transmission Control Protocol)，它有什么特点？**
+
+  + TCP是面向连接的运输层协议，在无连接，不可靠的IP层网络服务基础上提供 **可靠交付** 的 **基于字节流** 的传输层通信协议
+
+    + 面向连接： TCP连接只支持点对点的，只有两个端点
+
+    + 可靠的：传输过程中无论网络链路怎么变化，TCP第一能保证报文能达到接收端
+
+    + 面向字节流： 虽然应用程序与TCP以数据块的形式交互，但TCP把上层交付下来的数据仅看成是一连串无结构的字节流
+
+      > TCP 不保证接收方应用程序数据块与发出的数据块大小对应，但字节流必须完全一样。
+
+  + 传输过程的特点：
+
+    + TCP 根据对方给出的窗口值和当前网络拥塞的程度来决定一个报文段应包含多少个字节（UDP 发送的报文⻓ 度是应用进程给出的）
+    + TCP 可把太⻓的数据块划分短一些再传送
+    + TCP 也可等待积累有足够多的字节后再构成报文段发送出去
+
+---
+
++  **TCP报文段首部有哪些字段？**
+  + 从前往后分别是
+    + 源端口号 (2 bytes)，目的端口号 (2 bytes)
+    + 序号  (4 bytes)
+    + 确认号  (4 bytes)
+    + 数据偏移， 保留，紧急URG，确认ACK，推送PSH，复位RST，同步SYN，终止FIN，窗口 (2 bytes)
+    + 检验和  (2 bytes)，紧急指针 (2 bytes)
+    + 选项字段 ，填充(首部是4字节的整数倍)
+
+---
+
++  **介绍一下TCP的连接的端点与协商内容**
+
+  + TCP面向的是套接字，连接端点称为socket或者插口
+
+    <div align  = center>socket = ip地址 + 端口号 </div>
+
+  + 建立TCP连接时需要通信两端达成三个信息的共识
+
+    + socket：即IP地址与端口号
+    + 序列号：用来解决乱序问题
+    + 窗口大小：用作流量控制
+
+---
+
++  **如何确定一个TCP连接**
+  + 源地址，源端口，目的地址，目的端口，这四元组能确定一个连接
+    + 源地址，目的地址 在IP头部，通过IP协议将报文发送到具体主机
+    + 源端口，目的端口 在TCP头部，通过TCP协议将报文发送到具体进程
+
+---
+
++  **有一个 IP 的服务器监听了一个端口，它的 TCP 的最大连接数是多少？**
+
+  + 最大TCP连接数 = 客户端 IP 数 * 客户端的端口数
+
+  + 对 IPv4， IP 数最多为 $2^{32}$ ，端口数最多为$2^{16}$，则最大 TCP连接数为 $2^{48}$。但远不能到达这个上限值。
+
+    > + 文件描述符限制，Socket 都是文件，要通过 ulimit 配置文件描述符的数目;
+    > + 内存限制
+
+---
+
++ **TCP与UDP有哪些区别？**
+  1. 连接：
+     +  TCP面向连接传输协议，传输数据之前需建立连接，UDP无连接，即可传输
+  2. 服务对象
+     + TCP点对点
+     + UDP都行
+  3. 传输方式
+     + TCP 面向连接，基于字节流，无边界，但保证有序与可靠
+     + UDP直接发送包，有边界，但可能出现丢包与乱序
+  4. 可靠性
+     + TCP是可靠交付数据，有序，不丢失，无损伤
+     + UDP尽最大努力传输，不保证可靠性
+  5. 拥塞控制，流量控制
+     + TCP有拥塞控制与流量控制机制，保证数据传输的安全性
+     + UDP没有，就算网络拥堵也不影响发送速率
+  6. 首部开销
+     + TCP首部较长，没有使用选项字段时为20字节，开销较大
+     + UDP首部只有8字节，固定不变，开销较小
+  7. 分片方法
+     + TCP是在传输层进行分片，当数据大于MSS，TCP会进行分片，若中途丢失一个分片，只需重发对应分片即可
+     + UDP是在网络层进行分片，当数据大于MTU，IP会进行分片，若中途丢失一个分片，在实现可靠传输的 UDP 时需重传整个的数据包，所以通常UDP报文应该小于MTU
+  8. 应用场景
+     + TCP是可靠交付，用于
+       + FTP文件传输
+       + HTTP/HTTPS
+     + UDP 无连接，可随时发送，处理简单高效
+       + 包总量较小的通信，如DNS，SNMP
+       + 视频，音频等多媒体通信
+       + 广播通信
+
+---
+
++  **为什么UDP头部没有 首部长度 字段，而TCP有？**
+  + TCP有可变长的 选项 字段，所以需要记录长度
+  + UDP首部大小固定，无需记录
+
+---
+
++  **为什么 UDP 头部有「包⻓度」字段，而 TCP 头部则没有「包⻓度」字段呢?**
+  + TCP 是计算负载数据⻓度:  TCP数据的⻓度 =  IP总⻓度 - IP首部⻓度 - IP首部⻓度
+  + UDP其实也可以这么计算，但可能是为了网络设备硬件设计和处理方便，首部⻓度需 **4** 字节整数倍。利用字段可能可能是为了补全。
+
+---
+
++ **TCP连接建立过程中要解决哪些问题？**
++ **TCP链接建立过程**
+
+---
 
 +  **TCP建立连接中维护「序列号」的作用？**
 
   + 接收方可以去除重复的数据; 
   + 接收方可以根据数据包的序列号按序接收; 
   + 可以标识发送出去的数据包中， 哪些是已经被对方收到的
+
+---
 
 +  **TCP建立连接为什么是三次握手，而不是两次或四次？**
 
@@ -196,10 +363,14 @@
     + 「两次握手」:无法防止历史连接的建立，会造成双方资源的浪费，也无法可靠的同步双方序列号; 
     + 「四次握手」:三次握手就已经理论上最少可靠连接建立，所以不需要使用更多的通信次数。
 
+---
+
 +   **为什么客户端和服务端的初始序列号 ISN 是不相同的**
 
   + 如果序列号相同，那么就无法分辨出该报文是不是历史报文，如果历史报文被新的连接接收了，则会产生数据错乱
   + 为了安全性，防止黑客伪造的相同序列号的 TCP 报文被对方接收。
+
+---
 
 +  **初始序列号 ISN 是如何随机产生的?**
 
@@ -207,6 +378,8 @@
 
     > + M 是一个计时器，这个计时器每隔 4 毫秒加 1。
     > + F 是一个 Hash 算法，根据源 IP、目的 IP、源端口、目的端口生成一个随机数值。要保证 Hash 算法不能被外部轻易推算得出，用 MD5 算法是一个比较好的选择。
+
+---
 
 +  **既然 IP 层会分片，为什么 TCP 层还需要 MSS 呢?**
 
@@ -217,26 +390,35 @@
   + 当接收方发现 TCP 报文(头部 + 数据)的某一片丢失后，则不会响应 ACK 给对方，那么发送方的 TCP 在超时 后，就重会发「整个 TCP 报文(头部 + 数据)」。非常没有效率。
   + 为了达到最佳的传输效能， TCP 协议在建立连接的时候通常要协商双方的 **MSS** 值，当 TCP 层发现数据超过 MSS 时，则就先会进行分片，经过 TCP 层分片后，如果一个 TCP 分片丢失后，进行重发时也是以 **MSS** 为单位，而不用传所有 的分片，大大增加了重传的效率。
 
+---
+
 +  **什么是SYN攻击？**
   + 因为 TCP 连接建立是需要三次握手，假设攻击者短时间伪造不同 IP 地址的 SYN 报文，服务端每接收到 一个 SYN 报文，就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的 **SYN** 接收队列(未连接队列)，使得服务器不能为正常用户服务。
+
+---
 
 +  **如何避免SYN攻击？**
   + 修改 Linux 内核参数，控制队列大小和当队列满时应做相应的处理。
     + 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST，丢弃连接。
     + tcp_syncookies 的方式可以应对 SYN 攻击的方法: net.ipv4.tcp_syncookies = 1
 
-+ **TCP链接释放的过程**
+---
 
++ **TCP链接释放的过程**
 +  **释放连接为什么需要四次挥手？**
   + 关闭连接时，客户端向服务端发送 FIN 时，仅仅表示客户端不再发送数据了但是还能接收数据。
   + 服务器收到客户端的 FIN 报文时，先回一个 ACK 应答报文，而服务端可能还有数据需要处理和发送，等服务端不再发送数据时，才发送 FIN 报文给客户端来表示同意现在关闭连接。
   + 从上面过程可知，服务端通常需要等待完成数据的发送和处理，所以服务端的 ACK 和 FIN 一般都会分开发送，从而比三次握手导致多了一次。
-  
+
+---
+
 +   **MSL 与 TTL 的区别是什么？**
 
    +  MSL 是 Maximum Segment Lifetime，表示任何报文在网络上存在的最⻓时间，超过这个时间报文将被丢弃。
    +  因为 TCP 报文基于是 IP 协议的，而 IP 头中有一个 TTL 字段，表示经过的最大路由数，每经过一个路由器就减 1，为 0 则被丢弃，同时发送 ICMP 报文通知源主机。
    +  MSL 的单位是时间，而 TTL 是经过路由跳数。往往 **MSL** 应该要大于等于 **TTL** 消耗为 **0** 的 时间，以确保报文已被自然消亡。
+
+---
 
 +   **为什么需要 TIME_WAIT 状态?**
 
@@ -246,13 +428,81 @@
 
       > 若客户端四次挥手的最后一个 ACK 报文如果在网络中被丢失了，此时如果客户端 TIME-WAIT 过短或没有，则就直接进入了 CLOSED 状态了，那么服务端则会一直处在 LASE_ACK 状态。
 
+---
+
 +  **为什么 TIME_WAIT 等待的时间是 2MSL?**
   +  网络中可能存在来自发送方的数据包，当这些数据包被接收方处理后又会向对方发送响应，所以一来一回需要等待 **2** 倍的时间。
   + 在 Linux 系统里 2MSL 默认是 60 秒，那么一个 MSL 也就是 30 秒。**Linux** 系统停留在 **TIME_WAIT** 的时 间为固定的 **60** 秒。
 
+---
+
 +  **TIME_WAIT 过多有什么危害?**
   + 客户端TIME_WAIT过多，就会导致端口资源被占用，被占满就会导致无法创建新的连接。
   + 服务端只监听一个端口，但是会把连接扔给处理线程，所以理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
+
+---
+
++  **TCP如何实现的可靠传输？** 
+  + 首先，采用三次握手来建立TCP连接，四次握手来释放TCP连接，从而保证建立的传输信道是可靠的。
+  + 其次，TCP采用了连续ARQ协议来保证数据传输的正确性，使用滑动窗口协议来保证接方能够及时处理所接收到的数据，进行流量控制。
+  + 最后，TCP使用慢开始、拥塞避免、快重传和快恢复来进行拥塞控制，避免网络拥塞。
+
+---
+
++  **介绍一下停止等待协议**
+  + **“**停止等待**”**就是每发送完一个分组就停止发送，等待对方的确认。在收到确认后再发送下一个分组。
+  + 发送方如何知道对方正确收到消息的？
+    + 每一个已发送的分组都设置了一个超时计时器。 只要在超时计时器到期之前收到了相应的确认，就撤销该超时计时器，继续发送下一个分组 ，否则重发
+  + 如何知道收到 了重复的分组，需要丢弃呢？
+    + 每一个发送的分组都进行编号。接收方收到了编号相同的分组，则认为收到了重复分组，会进行丢弃，并回送确认
+    + 发送方也为发送的确认也进行编号，指示该确认是对哪一个分组的确认。
+    + 接收方根据确认其编号，可以确定它是对哪一个分组的确认，避免重发发送。若为重复的确认，则将其丢弃。
+  + 改进：为了提高传输效率，发送方可以不使用低效率的停止等待协议，而是采用流水线传输。
+
+---
+
++  **介绍一下 连续ARQ协议**
+  + 发送方设置
+    + 发送方设置发送窗口，将发送窗口中的分组连续发送出去，而不用等待对方的确认，提高了信道利用率
+    + 发送方没接收到一个确认，就会把发送窗口向前滑动一个分组的位置
+  + 接收方设置
+    + 不需要对每一个分组逐个发送确认，只需对按序到达的最后一个分组发送确认，表示到这个分组为止的所有分组都已正确收到。
+  + 回退N机制：如果发送方发送了前 5 个分组，而中间的第 **3** 个分组丢失了。这时接收方只能对前两个分组发出确认。发送方无法知道后面三个分组的下落，而只好把后面的三个分组都再重传一次。 
+  + 优点：容易实现，即使确认丢失也不必重传
+  + 缺点：不能向发送方反映出接收方已经正确收到的所有分组的信息。
+
+---
+
++  **介绍一下TCP的流量控制方法**
+  + TCP利用滑动窗口实现流量控制。窗口用来暂时存放字节流。发送方和接收方各有一个窗口。接收方通过 TCP 报文段中的窗口字段告诉发送方自己的窗口大小，发送方根据这个值和其它信息设置自己的窗口大小。
+  + 发送方：发送窗口内的字节都允许被发送，窗口左部的字节已经发送并且收到了确认，就将窗口右滑动一定距离，直到左部第一个字节不是已发送并且已确认的状态。
+  + 接收方：接收窗口内的字节都允许被接收，接收窗口左部字节已经发送确认并交付主机，就向右滑动接收窗口。接收窗口只会对窗口内最后一个按序到达的字节进行确认。
+
+---
+
++  **介绍一下TCP的拥塞控制原理**
+
+  + 流量控制是为了让接收方能来得及接收，而拥塞控制是为了降低整个网络的拥塞程度。否则导致网络拥塞程度更高，重发分组数目也会更多
+
+  + TCP 主要通过四个算法来进行拥塞控制: 慢开始、拥塞避免、快重传、快恢复。
+
+  + 发送方需要维护一个叫做拥塞窗口(cwnd)的状态变量
+
+    >  拥塞窗口 与 发送方窗口 的区别：拥塞窗口只是一个状态变量，实际决定发送方能发送多少数据的是发送方窗口。
+
+  + **慢开始与拥塞避免**
+
+    + 发送的最初执行慢开始，令 cwnd = 1，只能发送 1 个报文段；当收到确认后，将 cwnd 加倍
+    + 设置一个慢开始⻔限 ssthresh，当 cwnd >= ssthresh 时，进入拥塞避免，每个轮次只将 cwnd 加 1
+    + 如果出现了**==超时==**，则令 ssthresh = cwnd / 2，然后重新执行慢开始。
+
+  + 快重传与快恢复
+
+    + 在接收方，要求每次接收到报文段都应该对最后一个已收到的有序报文段进行确认。例如已接收到 M1，M2，此时收到 M4，应当发送对 M2 的确认。 
+    + 在发送方，如果收到三个重复确认，则知道下一个报文段丢失，应执行快重传，立即重传下一个报文段。例如收到三个 M2，则 M3 丢失，立即重传 M3。
+    + 在这种情况下，只是**==丢失==**个别报文段，而不是网络拥塞。因此执行快恢复，令 ssthresh = cwnd / 2 ，cwnd = ssthresh，注意到此时直接进入拥塞避免。
+
+  > 区分好 两者的区别和使用场景。
 
 ---
 
@@ -263,6 +513,41 @@
 
 
 + HTTP状态码
+
+
+
+---
+
++ **键入网址到网⻚显示，期间发生了什么?**
+  1. 查询**DNS**，获取域名对应的**IP**。
+     + 检查本地hosts文件是否有这个网址的映射，如果有，就调用这个IP地址映射，解析完成。
+     + 如果没有，则查找本地DNS解析器缓存
+     + 如果没有，查找填写或分配的首选DNS服务器，称为本地DNS服务器。
+     + 则此DNS服务器就会把请求转发至上一级DNS服务器，如果上一级DNS服务器不能解析，则 继续向上请求。最终将解析结果依次返回本地DNS服务器，本地DNS服务器再返回给客户机，查询完成。
+  2. 客户端与服务器建立**TCP**连接(三次握手)
+  3. 客户机发送**HTTP**请求报文:
+     + 应用层:客户端发送HTTP请求报文
+     + 传输层:切分⻓数据，并确保可靠性。
+     + 网络层:进行路由
+     + 数据链路层:传输数据
+     + 物理层:物理传输bit 
+  4. 经过物理层→数据链路层→网络层→传输层→应用层到达服务器端，服务器解析请求报文，发送HTTP响应报文。 
+  5. 客户端收到后解析HTTP响应报文
+  6. 浏览器开始显示HTML 
+  7. 浏览器重新发送请求获取图片、CSS、JS的数据。
+
+---
+
++  **Linux系统是如何收发网络包的？**
+  + 发送流程：
+    + 首先，会先进入到网络接口层，在这一层会检查报文的合法性，如果不合法则丢弃，合法则会找出该网络包的上层 协议的类型， 比如是 IPv4，还是 IPv6，接着再去掉帧头和帧尾，然后交给网络层。
+    +  到了网络层，则取出 IP 包，判断网络包下一步的走向，比如是交给上层处理还是转发出去。当确认这个网络包要发送给本机 后，就会从 IP 头里看看上一层协议的类型是 TCP 还是 UDP，接着去掉 IP 头，然后交给传输层。
+    + 传输层取出 TCP 头或 UDP 头，根据四元组「源 IP、源端口、目的 IP、目的端口」 作为标识，找出对应的 Socket，并把数据拷 ⻉到 Socket 的接收缓冲区。
+    + 最后，应用层程序调用 Socket 接口，从内核的 Socket 接收缓冲区读取新到来的数据到应用层。 至此，一个网络包的接收过程 就已经结束了，你也可以从下图左边部分看到网络包接收的流程，右边部分刚好反过来，它是网络包发送的流程。
+  + 接收流程：
+    + 首先，应用程序会调用 Socket 发送数据包的接口，由于这个是系统调用，所以会从用户态陷入到内核态中的 Socket 层，Socket 层会将应用层数据拷⻉到 Socket 发送缓冲区中。
+    + 接下来，网络协议栈从 Socket 发送缓冲区中取出数据包，并按照 TCP/IP 协议栈从上到下逐层处理。 如果使用的是 TCP 传输协 议发送数据，那么会在传输层增加 TCP 包头，然后交给网络层，网络层会给数据包增加 IP 包，然后通过查询路由表确认下一跳的 IP，并按照 MTU 大小进行分片。 分片后的网络包，就会被送到网络接口层，在这里会 通过 ARP 协议获得下一跳的 MAC 地址，然后增加帧头和帧尾，放到发包队列中。
+    +  这一些准备好后，会触发软中断告诉网卡驱动程序，这里有新的网络包需要发送，最后驱动程序通过 DMA，从发 包队列中读取 网络包，将其放入到硬件网卡的队列中，随后物理网卡再将它发送出去。
 
 ---
 
